--- a/econ-135-s2022-ps02.ipynb
+++ b/econ-135-s2022-ps02.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is an interactive jupyter notebook document, accessible at: <http://datahub.berkeley.edu/user-redirect/interact?account=braddelong&repo=2022-jupyter&branch=main&path=econ-135-s2022-ps02.ipynb>\n",
+    "This is an interactive jupyter notebook document, accessible at: <http://datahub.berkeley.edu/user-redirect/interact?account=braddelong&repo=22-jupyter-ps02&branch=main&path=econ-135-s2022-ps02.ipynb>\n",
     "\n",
     "Page down through it, following the instructions…\n",
     "\n",
