--- a/econ-135-s2022-ps02.ipynb
+++ b/econ-135-s2022-ps02.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1. Malthusian Models & Long-Run Global Growth: Python Notebook"
+    "# PYTHON EXERCISE B: MALTHUSIAN MODELS & LONG-RUN GLOBAL GROWTH: \n",
+    "\n",
+    "# 1. What This Is: An Interactive Python Notebook"
    ]
   },
   {
